--- a/CSS/signup.css
+++ b/CSS/signup.css
@@ -20,10 +20,20 @@
     select {
       width: 100%;
       padding: 12px 20px;
-      margin: 8px 0;
+      margin: 4px 0;
       display: inline-block;
       border: 1px solid #ccc;
       box-sizing: border-box;
+    }
+
+    label {
+      padding: 12px 20px;
+      margin: 4px 0;
+    }
+
+    .select-label {
+      padding: 0;
+      margin: 0;
     }
 
     button {
