--- a/CSS/signup.css
+++ b/CSS/signup.css
@@ -1,4 +1,9 @@
+html,body{
+  margin: 0;
+  padding: 0;
+}
 
+/* 
     body {
       font-family: Arial, sans-serif;
       background-color: #f4f4f4;
@@ -48,4 +53,4 @@
 
     button:hover {
       opacity: 0.8;
-    }
+    } */
