--- a/LabAssistant/CSS/styles.css
+++ b/LabAssistant/CSS/styles.css
@@ -2,3 +2,11 @@
 th,td,tr,h4{
 text-align:center;
 }
+.search-container{
+    display: flex;
+    justify-content: center;
+}
+
+#search_lent_items, #search_borrowed_items{
+    width: 450px;
+}
