--- a/Admin/CSS/styles.css
+++ b/Admin/CSS/styles.css
@@ -12,3 +12,16 @@ border-radius: 4px;
 cursor: pointer;
 
 }
+th,td {
+    text-align:center;
+    }
+            .button1{
+    background-color: red;
+    color: white;
+    padding: 5px 20px;
+    margin-right:10px;
+    border: none;   
+    border-radius: 4px;
+    cursor: pointer;
+
+    }
