--- a/LabAssistant/CSS/styles.css
+++ b/LabAssistant/CSS/styles.css
@@ -1,6 +1,6 @@
 
 th,td,tr,h4{
-text-align:center;
+    text-align:center;
 }
 .card-head {
     font-size: smaller;
@@ -11,6 +11,7 @@ text-align:center;
 }
 .card {
     cursor: pointer;
+    /* box-shadow: rgba(0, 71, 21, 0.638) 0px 2px 4px 0px, rgba(0, 71, 21, 0.655) 0px 2px 16px 0px; */
 }
 #reportlink {
     transition: all 0.2s linear;
@@ -21,4 +22,40 @@ text-align:center;
 .buttontext1 {
     transition: all 1s linear;
     display: none;
+}
+.table-card {
+    width: 1800x;
+    /* width:auto; */
+    overflow-x: scroll;
+}
+table {
+    border-collapse: separate!important;
+    border-spacing: 7.5px!important;
+    width: 100%;
+    /* display: flex;
+    flex-direction: column; */
+}
+thead {
+    font-size: 1.25rem;
+}
+tbody {
+    font-size: 1.1rem;
+}
+td,th {
+    /* border: 0.25rem solid white; */
+    padding: 0.6rem;
+    border-radius: 10px;
+    white-space: nowrap;
+}
+.lname {
+    white-space:normal;
+}
+.btn {
+    border-width: 10px;
+}
+tbody >tr:nth-child(even) > td {
+    background-color: rgb(216, 112, 147, 0.3);
+}
+tbody > tr:nth-child(odd) > td {
+    background-color: rgb(169, 169, 169, 0.3);
 }
