--- a/CSS/signup.css
+++ b/CSS/signup.css
@@ -16,7 +16,24 @@ html,body{
   background-color: #f2f2f2;
   border: none;
 }
-
+.randomimg{
+  margin-top: 30vh;
+  position: relative;
+  float: right;
+  mix-blend-mode:multiply;
+  z-index: -2;
+  margin-right: 1vw;
+  height: 62vh;
+  width: auto;
+  
+}
+.logoimg{
+  margin-top: 2vh;
+  mix-blend-mode:multiply;
+  margin-left: 2vw;
+  height: 90px;
+  
+}
 /* 
     body {
       font-family: Arial, sans-serif;
