admin-modal, not revoking/deleting assistant if assigned, table changes, table in user

--- a/LabAssistant/CSS/styles.css
+++ b/LabAssistant/CSS/styles.css
@@ -59,3 +59,17 @@ tbody >tr:nth-child(even) > td {
 tbody > tr:nth-child(odd) > td {
     background-color: rgb(169, 169, 169, 0.3);
 }
+button.nav-link {
+    color: rgba(255, 52, 52, 0.759);
+    font-weight: bold;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+button.nav-link:hover {
+    color:red;
+}
+/* button:focus {
+    color: black;
+    text-decoration: underline;
+
+} */
